--- a/ahref.html
+++ b/ahref.html
@@ -6,7 +6,7 @@
 	<body bgcolor = "yellow">
 	<ul>
 <table>
-<tr><td><li> <a href="Test2.html" TARGET="frame2"> <p class="six"> Data Diri </a></li></tr></td></p>
+<tr><td><li> <a href="test.html" TARGET="frame2"> <p class="six"> Data Diri </a></li></tr></td></p>
 	<tr><td><li> <a href="riwayat.html" TARGET="frame2"><p class="six"> Riwayat Sekolah </a></li></tr></td></p>
 	<tr><td><li> <a href="organisasi.html" TARGET="frame2"><p class="six"> Peng.Organisasi </a></li></tr></td></p>
 	<tr><td><li> <a href="penghargaan.html" TARGET="frame2"><p class="six"> Penghargaan </a></li></tr></td></p></table>
